squash build design layout
Remove   the .Github file that was configured with the template.
Currently, not needed in the porject.

build layout for header element and child element

--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Paul Ayo Resume</title>
-    <meta name="description" content="Resume responsive Design Challenge">
-    <meta name="keywords" content="webpack, webpack-configuration, template, boilerplate, setup, html, css, sass, javascript">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="Paul Ayo Oloyede">
-  </head>
-  <body>
-    <div>
-      <h1>
-        Paul Ayo Resumes  
-      </h1>
+
+<head>
+  <meta charset="UTF-8">
+  <title>Paul Ayo Resume</title>
+  <meta name="description" content="Resume responsive Design Challenge">
+  <meta name="keywords" content="paul, ayo, oloyede, resume, design, responsive, Challenge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="Paul Ayo Oloyede">
+</head>
+
+<body>
+  <div class="rdc-layout">
+    <div class="rdc-profile circle">
+      <img class="rdc-img" src="images/content/github.png">
+    </div>
+
+    <div class="rdc-breadcrumb">
+      <span class="rdc-breadcrumb--item">Designer</span>
+      <span class="rdc-breadcrumb--item">Developer</span>
+
     </div>
 
 
-    <footer>
-  
-    </footer>
-  </body>
+    <div class="rdc--title">
+      <h1 class="rdc--font--large-bold">Matt <br><span>McDonald</span> </h1>
+    </div>
+
+    <div class="rdc--action">
+      <button class="rdc--action__button--default">contact me</button>
+    </div>
+
+  </div>
+
+
+
+</body>
+
 </html>
