--- a/src/index.html
+++ b/src/index.html
@@ -11,29 +11,11 @@
 </head>
 
 <body>
-  <div class="rdc-layout">
-    <div class="rdc-profile circle">
-      <img class="rdc-img" src="images/content/github.png">
-    </div>
 
-    <div class="rdc-breadcrumb">
-      <span class="rdc-breadcrumb--item">Designer</span>
-      <span class="rdc-breadcrumb--item">Developer</span>
+  <div class="layout">
 
-    </div>
-
-
-    <div class="rdc--title">
-      <h1 class="rdc--font--large-bold">Matt <br><span>McDonald</span> </h1>
-    </div>
-
-    <div class="rdc--action">
-      <button class="rdc--action__button--default">contact me</button>
-    </div>
 
   </div>
-
-
 
 </body>
 
