--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,10 @@
 <body>
 
   <div class="layout">
+  <div class="section--layout__primary">
+    <div class="primary--default"></div>
 
+  </div>
 
   </div>
 
