explore scss and pallete system

--- a/src/index.html
+++ b/src/index.html
@@ -5,16 +5,28 @@
   <meta charset="UTF-8">
   <title>Paul Ayo Resume</title>
   <meta name="description" content="Resume responsive Design Challenge">
-  <meta name="keywords" content="paul, ayo, oloyede, resume, design, responsive, Challenge">
+  <meta name="keywords" content="resume, design, responsive, Challenge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="author" content="Paul Ayo Oloyede">
+  <meta name="author" content="Lorem Ipsum">
 </head>
 
 <body>
 
   <div class="layout">
   <div class="section--layout__primary">
-    <div class="primary--default"></div>
+    <div class="item-layout primary-color-50"></div>
+    <div class="item-layout primary-color-100"></div>
+
+    <div class="item-layout primary-color-200"></div>
+
+    <div class="item-layout primary-color-300"></div>
+    <div class="item-layout primary-color-400"></div>
+
+    <div class="item-layout primary-color-500"></div>
+
+    <div class="item-layout primary-color-600"></div>
+    <div class="item-layout primary-color-900"></div>
+
 
   </div>
 
