color pallete for primary and secondary is done

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <div class="layout">
-  <div class="section--layout__primary">
+  <div class="section--layout">
     <div class="item-layout primary-color-50"></div>
     <div class="item-layout primary-color-100"></div>
 
@@ -29,6 +29,23 @@
 
 
   </div>
+
+    <div class="section--layout">
+      <div class="item-layout accent-color-50"></div>
+      <div class="item-layout accent-color-100"></div>
+
+      <div class="item-layout accent-color-200"></div>
+
+      <div class="item-layout accent-color-300"></div>
+      <div class="item-layout accent-color-400"></div>
+
+      <div class="item-layout accent-color-500"></div>
+
+      <div class="item-layout accent-color-600"></div>
+      <div class="item-layout accent-color-900"></div>
+
+
+    </div>
 
   </div>
 
