--- a/src/index.html
+++ b/src/index.html
@@ -2,52 +2,52 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Paul Ayo Resume</title>
-  <meta name="description" content="Resume responsive Design Challenge">
-  <meta name="keywords" content="resume, design, responsive, Challenge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="author" content="Lorem Ipsum">
+    <meta charset="UTF-8">
+    <title>Lorem Ipsum Resume</title>
+    <meta content="Resume responsive Design Challenge" name="description">
+    <meta content="resume, design, responsive, Challenge" name="keywords">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta content="Lorem Ipsum" name="author">
 </head>
 
 <body>
 
-  <div class="layout">
-  <div class="section--layout">
-    <div class="item-layout primary-color-50"></div>
-    <div class="item-layout primary-color-100"></div>
-
-    <div class="item-layout primary-color-200"></div>
-
-    <div class="item-layout primary-color-300"></div>
-    <div class="item-layout primary-color-400"></div>
-
-    <div class="item-layout primary-color-500"></div>
-
-    <div class="item-layout primary-color-600"></div>
-    <div class="item-layout primary-color-900"></div>
-
-
-  </div>
-
+<div class="layout">
     <div class="section--layout">
-      <div class="item-layout accent-color-50"></div>
-      <div class="item-layout accent-color-100"></div>
+        <div class="item-layout primary-color-50"></div>
+        <div class="item-layout primary-color-100"></div>
 
-      <div class="item-layout accent-color-200"></div>
+        <div class="item-layout primary-color-200"></div>
 
-      <div class="item-layout accent-color-300"></div>
-      <div class="item-layout accent-color-400"></div>
+        <div class="item-layout primary-color-300"></div>
+        <div class="item-layout primary-color-400"></div>
 
-      <div class="item-layout accent-color-500"></div>
+        <div class="item-layout primary-color-500"></div>
 
-      <div class="item-layout accent-color-600"></div>
-      <div class="item-layout accent-color-900"></div>
+        <div class="item-layout primary-color-600"></div>
+        <div class="item-layout primary-color-900"></div>
 
 
     </div>
 
-  </div>
+    <div class="section--layout">
+        <div class="item-layout accent-color-50"></div>
+        <div class="item-layout accent-color-100"></div>
+
+        <div class="item-layout accent-color-200"></div>
+
+        <div class="item-layout accent-color-300"></div>
+        <div class="item-layout accent-color-400"></div>
+
+        <div class="item-layout accent-color-500"></div>
+
+        <div class="item-layout accent-color-600"></div>
+        <div class="item-layout accent-color-900"></div>
+
+
+    </div>
+
+</div>
 
 </body>
 
