add header background and profile circle

--- a/src/index.html
+++ b/src/index.html
@@ -12,42 +12,23 @@
 
 <body>
 
-<div class="layout">
-    <div class="section--layout">
-        <div class="item-layout primary-color-50"></div>
-        <div class="item-layout primary-color-100"></div>
 
-        <div class="item-layout primary-color-200"></div>
+   <div class="header-container">
+        <div class="profile">
+            <div class="profile-img">
+            </div>
 
-        <div class="item-layout primary-color-300"></div>
-        <div class="item-layout primary-color-400"></div>
+            <div class="breadcrumb">
+                <ul class="breadcrumb-list">
+                    <li class="breadcrumb-list--item">designer</li>
+                    <li class="breadcrumb-list--item">developer</li>
+                </ul>
 
-        <div class="item-layout primary-color-500"></div>
+            </div>
 
-        <div class="item-layout primary-color-600"></div>
-        <div class="item-layout primary-color-900"></div>
+        </div>
+   </div>
 
-
-    </div>
-
-    <div class="section--layout">
-        <div class="item-layout accent-color-50"></div>
-        <div class="item-layout accent-color-100"></div>
-
-        <div class="item-layout accent-color-200"></div>
-
-        <div class="item-layout accent-color-300"></div>
-        <div class="item-layout accent-color-400"></div>
-
-        <div class="item-layout accent-color-500"></div>
-
-        <div class="item-layout accent-color-600"></div>
-        <div class="item-layout accent-color-900"></div>
-
-
-    </div>
-
-</div>
 
 </body>
 
