add header text, breadcrumb and fix avatar

--- a/src/index.html
+++ b/src/index.html
@@ -13,21 +13,23 @@
 <body>
 
 
-   <div class="header-container">
-        <div class="profile">
-            <div class="profile-img">
-            </div>
+<div class="header-container">
+    <div class="profile">
+        <div class="profile-img"></div>
+    </div>
 
-            <div class="breadcrumb">
-                <ul class="breadcrumb-list">
-                    <li class="breadcrumb-list--item">designer</li>
-                    <li class="breadcrumb-list--item">developer</li>
-                </ul>
+    <div class="breadcrumb">
+        <ul class="breadcrumb-list">
+            <li class="breadcrumb-list--item">designer</li>
+            <li class="breadcrumb-list--item">developer</li>
+        </ul>
 
-            </div>
+    </div>
 
-        </div>
-   </div>
+<div class="title">
+    <h1 class="title--item playFair__900">Matt McDonald</h1>
+</div>
+</div>
 
 
 </body>
