add contact me button

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,12 @@
 
 <div class="header-container">
     <div class="profile">
-        <div class="profile-img"></div>
+
+        <div class="profile-img">
+            <svg class="icon  icon--plus" viewBox="0 0 5 5" xmlns="http://www.w3.org/2000/svg">
+                <path d="M2 1 h1 v1 h1 v1 h-1 v1 h-1 v-1 h-1 v-1 h1 z" />
+            </svg>
+        </div>
     </div>
 
     <div class="breadcrumb">
@@ -26,9 +31,14 @@
 
     </div>
 
-<div class="title">
-    <h1 class="title--item playFair__900">Matt McDonald</h1>
-</div>
+    <div class="title">
+        <h1 class="title--item playFair__900">Matt McDonald</h1>
+    </div>
+
+    <div class="action">
+        <button class="action--btn ptSansNarrow ptSansNarrow__700" type="button">contact me</button>
+
+    </div>
 </div>
 
 
