add more sections

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 
         <div class="profile-img">
             <svg class="icon  icon--plus" viewBox="0 0 5 5" xmlns="http://www.w3.org/2000/svg">
-                <path d="M2 1 h1 v1 h1 v1 h-1 v1 h-1 v-1 h-1 v-1 h1 z" />
+                <path d="M2 1 h1 v1 h1 v1 h-1 v1 h-1 v-1 h-1 v-1 h1 z"/>
             </svg>
         </div>
     </div>
@@ -32,7 +32,7 @@
     </div>
 
     <div class="title">
-        <h1 class="title--item playFair__900">Matt McDonald</h1>
+        <h1 class="title__item playFair__900">Matt <span class="word-break playFair__900">McDonald </span></h1>
     </div>
 
     <div class="action">
@@ -40,6 +40,72 @@
 
     </div>
 </div>
+
+<main>
+    <article aria-label="quick summary" class="about">
+        <h5 class="about__title playFair__900">About Me</h5>
+        <p class="about__lead">
+            Use this area to say something about yourself or describe your goals. Tum dicere exorsus est cur verear, ne
+            ad id omnia referri oporteat, ipsum per se ipsam voluptatem, quia consequuntur magni dolores eos, qui
+            blanditiis praesentium voluptatum deleniti atque insitam in ea quid est eligendi optio, cumque nihil ut ipsi
+            auctori huius disciplinae placet: constituam, quid.
+        </p>
+    </article>
+
+    <div class="divider"></div>
+
+    <div class="layout">
+        <h3 class="header playFair__900">Experience</h3>
+
+        <article class="work">
+            <h6 class="work__role ptSansNarrow__700">front-end developer <span class="sep"></span> dropbox</h6>
+            <span class="work__date ptSansNarrow__400">Mar.2020 - Present</span>
+            <p class="work__lead ptSansNarrow__400">
+                Describe your responsibilities. Tum dicere exorsus est cur verear, ne ad id omnia referri oporteat,
+                ipsum per se ipsam voluptatem, quia consequuntur magni dolores eos, qui blanditiis praesentium
+                voluptatum deleniti atque insitam in ea quid est eligendi optio, cumque nihil ut ipsi auctori huius
+                disciplinae placet: constituam, quid.
+            </p>
+
+        </article>
+        <article class="work">
+            <h6 class="work__role ptSansNarrow__700">Visual Designer<span class="sep"></span>OutboundEngine</h6>
+            <span class="work__date ptSansNarrow__400">Sept. 2017 - Mar. 2020</span>
+            <p class="work__lead ptSansNarrow__400">
+                Describe your responsibilities. Tum dicere exorsus est cur verear, ne ad id omnia referri oporteat,
+                ipsum per se ipsam voluptatem, quia consequuntur magni dolores eos, qui blanditiis praesentium
+                voluptatum deleniti atque insitam in ea quid est eligendi optio, cumque nihil ut ipsi auctori huius
+                disciplinae placet: constituam, quid.
+            </p>
+
+        </article>
+        <article class="work">
+            <h6 class="work__role ptSansNarrow__700">Lead Designer<span class="sep"></span> Scrypt, Inc.</h6>
+            <span class="work__date ptSansNarrow__400">Jun. 2014 - Sept. 2017</span>
+            <p class="work__lead ptSansNarrow__400">
+                Describe your responsibilities. Tum dicere exorsus est cur verear, ne ad id omnia referri oporteat,
+                ipsum per se ipsam voluptatem, quia consequuntur magni dolores eos, qui blanditiis praesentium
+                voluptatum deleniti atque insitam in ea quid est eligendi optio, cumque nihil ut ipsi auctori huius
+                disciplinae placet: constituam, quid.
+            </p>
+
+        </article>
+
+        <article class="work">
+            <h6 class="work__role ptSansNarrow__700">UI Designer<span class="sep"></span> Pinger Inc.</h6>
+            <span class="work__date ptSansNarrow__400">Jun. 2014 - Sept. 2017</span>
+            <p class="work__lead ptSansNarrow__400">
+                Describe your responsibilities. Tum dicere exorsus est cur verear, ne ad id omnia referri oporteat,
+                ipsum per se ipsam voluptatem, quia consequuntur magni dolores eos, qui blanditiis praesentium
+                voluptatum deleniti atque insitam in ea quid est eligendi optio, cumque nihil ut ipsi auctori huius
+                disciplinae placet: constituam, quid.
+            </p>
+
+        </article>
+    </div>
+
+
+</main>
 
 
 </body>
