main section for mobile view is done

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
 
     <div class="divider"></div>
 
-    <div class="layout">
+    <div class="experience layout">
         <h3 class="header playFair__900">Experience</h3>
 
         <article class="work">
@@ -104,7 +104,66 @@
         </article>
     </div>
 
+    <div class="divider"></div>
+    <div class="education layout">
+        <h3 class="header playFair__900">Education</h3>
+        <h6 class="work__role ptSansNarrow__700 no-word--wrap">BFA in Graphic Design <span class="sep"></span>James Madison University </h6>
+        <span class="work__date ptSansNarrow__400">Graduated 2014</span>
+    </div>
 
+    <div class="divider"></div>
+
+    <div class="skill layout">
+        <h3 class="title--small secondary-color text--uppercase margin-top__lg ptSansNarrow__700">Skillset</h3>
+        <ul class="margin-top__xs">
+            <li>Visual Design</li>
+            <li>Illustration</li>
+            <li>UX / Prototyping</li>
+            <li>Video / Motion Graphics</li>
+            <li>Marketing</li>
+            <li>Front-End Development</li>
+        </ul>
+
+    </div>
+
+    <div class="award layout">
+        <h3 class="title--small text--uppercase
+         secondary-color margin-top__lg ptSansNarrow__700">Awards</h3>
+        <ul class="margin-top__xs">
+            <li>Award 1 — Mar. 2019</li>
+            <li>Award 2 — Sept. 2015</li>
+            <li>Award 3 — Feb. 2013</li>
+            <li>Award 4 — Dec. 2011</li>
+            <li>Award 5 — Jan. 2005</li>
+        </ul>
+    </div>
+
+    <div class="trait layout">
+        <h3 class="title--small secondary-color text--uppercase
+         margin-top__lg ptSansNarrow__700">Career Traits</h3>
+        <ul class="margin-top__xs item--spacing__md">
+            <li><p class="ptSansNarrow__400 line-height__lg"><span class="title--small ptSansNarrow__700"> Holistic Designer</span> - Design should be treated as a living organism, guided by the environment it lives in as a whole.</p></li>
+            <li><p class="ptSansNarrow__400 line-height__lg"> <span class="title--small ptSansNarrow__700"> User-Focused</span> - I pay close attention to the user’s needs and pain points. I design with empathy. Launch, learn & iterate.</p></li>
+            <li><p class="ptSansNarrow__400 line-height__lg"><span class="title--small ptSansNarrow__700"> Proactive Evolution</span> - Curiosity and a desire to learn constantly broadens my skill set, enabling me to wear many hats at once.</p></li>
+            <li><p class="ptSansNarrow__400 line-height__lg"><span class="title--small ptSansNarrow__700"> Bold, yet practical</span> - I know when to push the boundaries vs. when to embrace simplicity to meet multiple deadlines.</p></li>
+        </ul>
+    </div>
+
+
+    <div class="projects layout">
+        <h3 class="title--small text--uppercase
+         secondary-color margin-top__lg ptSansNarrow__700">Recent Works</h3>
+        <ul class="margin-top__xs">
+            <li><a href="javascript:void(0)" class="line-height__md">thedonut.co →</a></li>
+            <li><a href="javascript:void(0)" class="line-height__md">outboundengine.com →</a></li>
+            <li><a href="javascript:void(0)" class="line-height__md">rswalsh.com →</a></li>
+            <li><a href="javascript:void(0)" class="line-height__md">frondaustin.com →</a></li>
+            <li><a href="javascript:void(0)" class="line-height__md">tipyo.net →</a></li>
+            <li><a href="javascript:void(0)" class="line-height__md">codefresh.io → </a></li>
+            <li><a href="javascript:void(0)" class="line-height__md">carsoncreekranch.com →</a></li>
+
+        </ul>
+    </div>
 </main>
 
 
