add tablet responsiveness

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 <div class="header-container">
     <div class="profile">
 
-        <div class="profile-img">
+        <div class="img--circle">
             <svg class="icon  icon--plus" viewBox="0 0 5 5" xmlns="http://www.w3.org/2000/svg">
                 <path d="M2 1 h1 v1 h1 v1 h-1 v1 h-1 v-1 h-1 v-1 h1 z"/>
             </svg>
@@ -116,7 +116,7 @@
 
     <div class="skill layout">
         <h3 class="title--small secondary-color text--uppercase margin-top__lg ptSansNarrow__700">Skillset</h3>
-        <ul class="margin-top__xs">
+        <ul class="skill-list margin-top__xs">
             <li>Visual Design</li>
             <li>Illustration</li>
             <li>UX / Prototyping</li>
@@ -130,7 +130,7 @@
     <div class="award layout">
         <h3 class="title--small text--uppercase
          secondary-color margin-top__lg ptSansNarrow__700">Awards</h3>
-        <ul class="margin-top__xs">
+        <ul class="award-list margin-top__xs">
             <li>Award 1 — Mar. 2019</li>
             <li>Award 2 — Sept. 2015</li>
             <li>Award 3 — Feb. 2013</li>
@@ -142,9 +142,11 @@
     <div class="trait layout">
         <h3 class="title--small secondary-color text--uppercase
          margin-top__lg ptSansNarrow__700">Career Traits</h3>
-        <ul class="margin-top__xs item--spacing__md">
-            <li><p class="ptSansNarrow__400 line-height__lg"><span class="title--small ptSansNarrow__700"> Holistic Designer</span>
-                - Design should be treated as a living organism, guided by the environment it lives in as a whole.</p>
+        <ul class="trait-list margin-top__xs item--spacing__md">
+            <li><p class="ptSansNarrow__400 line-height__lg">
+                <span class="title--small ptSansNarrow__700"> Holistic Designer</span>
+                - Design should be treated as a living organism, guided by the environment
+                it lives in as a whole.</p>
             </li>
             <li><p class="ptSansNarrow__400 line-height__lg"><span
                     class="title--small ptSansNarrow__700"> User-Focused</span> - I pay close attention to the user’s
@@ -161,7 +163,7 @@
     <div class="projects layout">
         <h3 class="title--small text--uppercase
          secondary-color margin-top__lg ptSansNarrow__700">Recent Works</h3>
-        <ul class="margin-top__xs">
+        <ul class="project-list margin-top__xs">
             <li><a class="line-height__md" href="javascript:void(0)">thedonut.co →</a></li>
             <li><a class="line-height__md" href="javascript:void(0)">outboundengine.com →</a></li>
             <li><a class="line-height__md" href="javascript:void(0)">rswalsh.com →</a></li>
